inserção das campanhas abril/24

--- a/exemplo-promo.html
+++ b/exemplo-promo.html
@@ -56,3 +56,61 @@
     </div>
   </div>
   <!--FIM DO BLOCO DA PROMOÇÃO-->
+  <!--BLOCO DE PROMOÇÃO-->
+  <div class="card mb-3 text-center">
+    <div class="card-header">
+      <!--TÍTULO DA CAMPANHA-->
+      <h5 class="card-title">Força do Leite</h5>
+      <!--PASTA DE ATUAÇÃO DA CAMPANHA-->
+      <p class="card-text">LEITE EUROPEU</p>
+    </div>
+    <div class="card-body">
+      <!--DCO-->
+      <div class="d-grid gap-2 mb-3">
+        <a href="./promocoes/FORCA-DO-LEITE/DCO-FORCA-DO-LEITE.pdf" target="_blank" class="btn btn-primary">
+          <i class="fa-solid fa-info"></i>
+          DCO
+        </a>
+      </div>
+      <!--ACCORDION DOS MATERIAIS DA PROMOÇÃO-->
+      <!--LEMBRAR DE TROCAR O ID DO ACCORDION-->
+      <div class="accordion accordion-flush border " id="accordion-promocao-1">
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <!--data-bs-target e arial-controls deve ser igual ao id do collapse-->
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#collapse-promocao-1" aria-expanded="false" aria-controls="collapse-promocao-1">
+              Material da Campanha
+            </button>
+          </h2>
+          <!--trocar o id do collapse para não dar conflito-->
+          <div id="collapse-promocao-1" class="accordion-collapse collapse" data-bs-parent="#accordion-promocao-1">
+            <div class="accordion-body">
+              <!--MATERIAIS DA PROMOÇÃO-->
+              <div class="d-grid gap-2 ">
+                <h6>Leite Europeu</h6>
+                <a href="./promocoes/FORCA-DO-LEITE/PRECO-CONVENCIONAL.pdf" target="_blank" class="btn btn-primary">
+                  <i class="fa-solid fa-file-invoice-dollar"></i>
+                  Preços - Convencional
+                </a>
+                <a href="./promocoes/FORCA-DO-LEITE/PRECO-SEXADO.pdf" target="_blank" class="btn btn-primary">
+                  <i class="fa-solid fa-file-invoice-dollar"></i>
+                  Preços - Sexado
+                </a>
+                <a href="./promocoes/FORCA-DO-LEITE/CATALOGO-TOUROS_compressed.pdf" target="_blank"
+                  class="btn btn-primary">
+                  <i class="fa-solid fa-book"></i>
+                  Catálogo
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--VALIDADE DA CAMPANHA - RADAPÉ-->
+    <div class="card-footer text-body-secondary">
+      Validade: 31 de Março de 2024 (às 18:00h)
+    </div>
+  </div>
+  <!--FIM DO BLOCO DA PROMOÇÃO-->
