--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
               <div class="modal-body">
                 <div class="d-grid gap-2 ">
                   <h6>Documentação</h6>
-                  <a href="./promocoes/ESTAÇÃO-ANTECIPADA/PREÇO-CORTE-EUROPEU.pdf" target="_blank" class="btn btn-danger">
+                  <a href="./promocoes/ESTAÇÃO-ANTECIPADA/DCO-ESTAÇÃO-ANTECIPADA.pdf" target="_blank" class="btn btn-danger">
                     <i class="fa-solid fa-info"></i>
                     DCO
                   </a>
@@ -436,7 +436,7 @@
   </div>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script>
-   /* Swal.fire({
+   Swal.fire({
       title: '<strong>ATENÇÃO</strong>',
       icon: 'info',
       html:
@@ -452,7 +452,7 @@
     const navMenu = document.querySelector("#navMenu")
     navMenu.addEventListener("click", () => {
       navMenu.classList.toggle("active")
-    })*/
+    })
   </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
