novas campanhas em abril/24

--- a/index.html
+++ b/index.html
@@ -250,10 +250,10 @@
 
       <div class="col-sm-4">
         <div class="card mb-3">
-          <img src="./assets/img-cards/corte zebu e europeu.webp" class="card-img-top imgCard" alt="...">
+          <img src="./assets/img-cards/corte-zebu.jpg" class="card-img-top imgCard" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Porteira Aberta</h5>
-            <p class="card-text">Corte Zebu e Europeu <br><strong>Validade:</strong> 14 de Abril de 2024 (até 18:00h)</p>
+            <h5 class="card-title">Expozebu</h5>
+            <p class="card-text">Corte Zebu<br><strong>Validade:</strong> 31 de Maio de 2024 (até 18:00h)</p>
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#porteiraAberta">
               Material da Campanha
             </button>
@@ -264,35 +264,29 @@
           <div class="modal-dialog">
             <div class="modal-content">
               <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">Porteira Aberta</h1>
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Expozebu</h1>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
               <div class="modal-body">
                 <div class="d-grid gap-2 ">
                   <h6>Documentação</h6>
-                  <a href="./promocoes/PORTEIRA-ABERTA/DCO-PORTEIRA-ABERTA.pdf" target="_blank" class="btn btn-danger">
+                  <a href="./promocoes/EXPOZEBU-CORTE-ZEBU/DCO-EXPOZEBU-CORTE-ZEBU.pdf" target="_blank" class="btn btn-danger">
                     <i class="fa-solid fa-info"></i>
                     DCO
                   </a>
                   <h6>Corte Europeu</h6>
-                  <a href="./promocoes/PORTEIRA-ABERTA/PRECO-CORTE-EUROPEU.pdf" target="_blank" class="btn btn-primary">
+                  <a href="./promocoes/EXPOZEBU-CORTE-ZEBU/PREÇO-CONVENCIONAL.pdf" target="_blank" class="btn btn-primary">
                     <i class="fa-solid fa-file-invoice-dollar"></i>
-                    Preços Corte Europeu
+                    Preços Convencional
                   </a>
-                  <a href="./promocoes/PORTEIRA-ABERTA/CATÁLOGO-CORTE-EUROPEU.pdf" target="_blank"
+                  <a href="./promocoes/EXPOZEBU-CORTE-ZEBU/PREÇO-SEXADO.pdf" target="_blank" class="btn btn-primary">
+                    <i class="fa-solid fa-file-invoice-dollar"></i>
+                    Preços Sexado
+                  </a>
+                  <a href="./promocoes/EXPOZEBU-CORTE-ZEBU/CATALOGO-EXPOZEBU-CORTE-ZEBU.pdf" target="_blank"
                     class="btn btn-primary">
                     <i class="fa-solid fa-book"></i>
-                    Catálogo Corte Europeu
-                  </a>
-                  <h6>Corte Zebu</h6>
-                  <a href="./promocoes/PORTEIRA-ABERTA/PRECO-CORTE-ZEBU.pdf" target="_blank" class="btn btn-primary">
-                    <i class="fa-solid fa-file-invoice-dollar"></i>
-                    Preços Corte Zebu
-                  </a>
-                  <a href="./promocoes/PORTEIRA-ABERTA/CATÁLOGO-CORTE-ZEBU.pdf" target="_blank"
-                    class="btn btn-primary">
-                    <i class="fa-solid fa-book"></i>
-                    Catálogo Corte Zebu
+                    Catálogo 
                   </a>
                 </div>
               </div>
@@ -306,7 +300,7 @@
           <img src="./assets/img-cards/leite-zebu.jpg" class="card-img-top img-fluid imgCard" alt="...">
           <div class="card-body">
             <h5 class="card-title">Esquenta Expozebu</h5>
-            <p class="card-text">Corte Zebu e Europeu <br><strong>Validade:</strong> 10 de Maio de 2024 (até 18:00h)</p>
+            <p class="card-text">Leite Zebu <br><strong>Validade:</strong> 10 de Maio de 2024 (até 18:00h)</p>
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#esquentaExpozebu">
               Material da Campanha
             </button>
@@ -354,7 +348,7 @@
           <img src="./assets/img-cards/leite-europeu.jpg" class="card-img-top imgCard" alt="...">
           <div class="card-body">
             <h5 class="card-title">Progresso Máximo</h5>
-            <p class="card-text">Corte Zebu e Europeu <br><strong>Validade:</strong> 30 de Abril de 2024 (até 18:00h)</p>
+            <p class="card-text">Leite Europeu <br><strong>Validade:</strong> 30 de Abril de 2024 (até 18:00h)</p>
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#progressoMaximo">
               Material da Campanha
             </button>
@@ -402,7 +396,7 @@
           <img src="./assets/img-cards/embriões.jpeg" class="card-img-top imgCard" alt="...">
           <div class="card-body">
             <h5 class="card-title">Expozebu Embryo</h5>
-            <p class="card-text">Corte Zebu e Europeu <br><strong>Validade:</strong> 10 de Maio de 2024 (até 18:00h)</p>
+            <p class="card-text">Leite Zebu <br><strong>Validade:</strong> 10 de Maio de 2024 (até 18:00h)</p>
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#embryo">
               Material da Campanha
             </button>
