inserção de formulário de RA

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <nav class="navbar navbar-expand-lg border-bottom shadow-sm mb-3">
     <div class="container">
       <!--LOGO-->
-      <a class="navbar-brand" href=""><strong>CRV Brazil</strong></a>
+      <a class="navbar-brand" href=""><strong>CRV Lagoa</strong></a>
       <!--BOTÃO DE EXPANDIR MENU (MOBILE)-->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
         aria-expanded="false" aria-controls="collapseExample">
@@ -77,6 +77,12 @@
                 <a class="dropdown-item" target="_blank" href="./servicos/Lista_Contatos_Internos_CRV_28-02-24 1.pdf">
                   <i class="fa-solid fa-address-book"></i>
                   Contatos CRV
+                </a>
+              </li>
+              <li>
+                <a class="dropdown-item" target="_blank" href="https://forms.office.com/pages/responsepage.aspx?id=lzsiLJC9zkSMJGoITfT0rVvd4Pw3M8dMixiymdDe0wxUME5STFNFSUNOOVRMSFEzU1pZNVU0UlUwUi4u">
+                  <i class="fa-solid fa-file-signature"></i>
+                  Registro RA
                 </a>
               </li>
             </ul>
