ajuste de cores dos botões

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
           <div class="card-body">
             <h5 class="card-title">Estação Antecipada</h5>
             <p class="card-text">Corte Zebu e Europeu <br><strong>Validade:</strong> 31 de Maio de 2024 (até 18:00h)</p>
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#estacaoAntecipada">
+            <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#estacaoAntecipada">
               Material da Campanha
             </button>
           </div>
@@ -222,7 +222,7 @@
               <div class="modal-body">
                 <div class="d-grid gap-2 ">
                   <h6>Documentação</h6>
-                  <a href="./promocoes/ESTAÇÃO-ANTECIPADA/DCO-ESTAÇÃO-ANTECIPADA.pdf" target="_blank" class="btn btn-danger">
+                  <a href="./promocoes/ESTAÇÃO-ANTECIPADA/DCO-ESTAÇÃO-ANTECIPADA.pdf" target="_blank" class="btn btn-warning">
                     <i class="fa-solid fa-info"></i>
                     DCO
                   </a>
@@ -260,7 +260,7 @@
           <div class="card-body">
             <h5 class="card-title">Expozebu</h5>
             <p class="card-text">Corte Zebu<br><strong>Validade:</strong> 31 de Maio de 2024 (até 18:00h)</p>
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#porteiraAberta">
+            <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#porteiraAberta">
               Material da Campanha
             </button>
           </div>
@@ -276,7 +276,7 @@
               <div class="modal-body">
                 <div class="d-grid gap-2 ">
                   <h6>Documentação</h6>
-                  <a href="./promocoes/EXPOZEBU-CORTE-ZEBU/DCO-EXPOZEBU-CORTE-ZEBU.pdf" target="_blank" class="btn btn-danger">
+                  <a href="./promocoes/EXPOZEBU-CORTE-ZEBU/DCO-EXPOZEBU-CORTE-ZEBU.pdf" target="_blank" class="btn btn-warning">
                     <i class="fa-solid fa-info"></i>
                     DCO
                   </a>
@@ -307,7 +307,7 @@
           <div class="card-body">
             <h5 class="card-title">Esquenta Expozebu</h5>
             <p class="card-text">Leite Zebu <br><strong>Validade:</strong> 10 de Maio de 2024 (até 18:00h)</p>
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#esquentaExpozebu">
+            <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#esquentaExpozebu">
               Material da Campanha
             </button>
           </div>
@@ -323,7 +323,7 @@
               <div class="modal-body">
                 <div class="d-grid gap-2 ">
                   <h6>Documentação</h6>
-                  <a href="./promocoes/ESQUENTA-EXPOZEBU/DCO-ESQUENTA-EXPOZEBU.pdf" target="_blank" class="btn btn-danger">
+                  <a href="./promocoes/ESQUENTA-EXPOZEBU/DCO-ESQUENTA-EXPOZEBU.pdf" target="_blank" class="btn btn-warning">
                     <i class="fa-solid fa-info"></i>
                     DCO
                   </a>
@@ -355,7 +355,7 @@
           <div class="card-body">
             <h5 class="card-title">Progresso Máximo</h5>
             <p class="card-text">Leite Europeu <br><strong>Validade:</strong> 30 de Abril de 2024 (até 18:00h)</p>
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#progressoMaximo">
+            <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#progressoMaximo">
               Material da Campanha
             </button>
           </div>
@@ -371,7 +371,7 @@
               <div class="modal-body">
                 <div class="d-grid gap-2 ">
                   <h6>Documentação</h6>
-                  <a href="./promocoes/PROGRESSO-MAXIMO/DCO-PROGRESSO-MAXIMO.pdf" target="_blank" class="btn btn-danger">
+                  <a href="./promocoes/PROGRESSO-MAXIMO/DCO-PROGRESSO-MAXIMO.pdf" target="_blank" class="btn btn-warning">
                     <i class="fa-solid fa-info"></i>
                     DCO
                   </a>
@@ -403,7 +403,7 @@
           <div class="card-body">
             <h5 class="card-title">Expozebu Embryo</h5>
             <p class="card-text">Leite Zebu <br><strong>Validade:</strong> 10 de Maio de 2024 (até 18:00h)</p>
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#embryo">
+            <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#embryo">
               Material da Campanha
             </button>
           </div>
@@ -419,7 +419,7 @@
               <div class="modal-body">
                 <div class="d-grid gap-2 ">
                   <h6>Documentação</h6>
-                  <a href="./promocoes/EXPOZEBU-EMBRYO/DCO-EXPOZEBU-EMBRYO.pdf" target="_blank" class="btn btn-danger">
+                  <a href="./promocoes/EXPOZEBU-EMBRYO/DCO-EXPOZEBU-EMBRYO.pdf" target="_blank" class="btn btn-warning">
                     <i class="fa-solid fa-info"></i>
                     DCO
                   </a>
@@ -437,7 +437,7 @@
           <div class="card-body">
             <h5 class="card-title">Combo Especial Jogral</h5>
             <p class="card-text">Leite Zebu <br><strong>Validade:</strong> 05 de Maio de 2024 (até 18:00h)</p>
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#jogral">
+            <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#jogral">
               Material da Campanha
             </button>
           </div>
@@ -453,7 +453,7 @@
               <div class="modal-body">
                 <div class="d-grid gap-2 ">
                   <h6>Documentação</h6>
-                  <a href="./promocoes/COMBO-ESPECIAL-JOGRAL/070-24 COMBO ESPECIAL JOGRAL 01-05-24.pdf" target="_blank" class="btn btn-danger">
+                  <a href="./promocoes/COMBO-ESPECIAL-JOGRAL/070-24 COMBO ESPECIAL JOGRAL 01-05-24.pdf" target="_blank" class="btn btn-warning">
                     <i class="fa-solid fa-info"></i>
                     DCO
                   </a>
