--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
   <div class="container">
     <!--POLÍTICA COMERCIAL-->
     <h1>Política Comercial</h1>
-    <h6>Abril/2024</h6>
+    <h6>Maio/2024</h6>
     <div class="accordion accordion-flush" id="accordion-politica-comercial">
       <div class="accordion-item">
         <h2 class="accordion-header">
