promoções de julho 24

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
   <div class="container">
     <!--POLÍTICA COMERCIAL-->
     <h1>Política Comercial</h1>
-    <h6>Maio/2024</h6>
+    <h6>Junho/2024</h6>
     <div class="accordion accordion-flush" id="accordion-politica-comercial">
       <div class="accordion-item">
         <h2 class="accordion-header">
@@ -202,10 +202,10 @@
       <div class="col-sm-4 mb-3 mb-sm-0">
 
         <div class="card mb-3">
-          <img src="./assets/img-cards/corte zebu e europeu.webp" class="card-img-top img-fluid imgCard" alt="...">
+          <img src="./assets/img-cards/leite.jpg" class="card-img-top img-fluid imgCard" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Estação Antecipada</h5>
-            <p class="card-text"><strong>Pasta:</strong> Corte Zebu e Europeu <br><strong>Validade:</strong> 31 de Maio de 2024 (até 18:00h)</p>
+            <h5 class="card-title">Mega Touros</h5>
+            <p class="card-text"><strong>Pasta:</strong> Leite Zebu e Europeu <br><strong>Validade:</strong> 30 de Junho de 2024 (até 18:00h)</p>
             <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#estacaoAntecipada">
               Material da Campanha
             </button>
@@ -218,37 +218,46 @@
           <div class="modal-dialog">
             <div class="modal-content">
               <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">Estação Antecipada</h1>
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Mega Touros</h1>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
               <div class="modal-body">
                 <div class="d-grid gap-2 ">
                   <h6>Documentação</h6>
-                  <a href="./promocoes/ESTAÇÃO-ANTECIPADA/DCO-ESTAÇÃO-ANTECIPADA.pdf" target="_blank"
+                  <a href="./promocoes/MEGA-TOUROS/DCO.pdf" target="_blank"
                     class="btn btn-warning">
                     <i class="fa-solid fa-info"></i>
                     DCO
                   </a>
-                  <h6>Corte Europeu</h6>
-                  <a href="./promocoes/ESTAÇÃO-ANTECIPADA/PREÇO-CORTE-EUROPEU.pdf" target="_blank"
+                  <h6>Leite Europeu</h6>
+                  <a href="./promocoes/MEGA-TOUROS/PREÇO-CONVENCIONAL-EUROPEU.pdf" target="_blank"
                     class="btn btn-primary">
                     <i class="fa-solid fa-file-invoice-dollar"></i>
-                    Preços Corte Europeu
+                    Preços Convencional
                   </a>
-                  <a href="./promocoes/ESTAÇÃO-ANTECIPADA/CATÁLOGO-CORTE-EUROPEU.pdf" target="_blank"
+                  <a href="./promocoes/MEGA-TOUROS/PREÇO-SEXADO-EUROPEU.pdf" target="_blank"
                     class="btn btn-primary">
-                    <i class="fa-solid fa-book"></i>
-                    Catálogo Corte Europeu
-                  </a>
-                  <h6>Corte Zebu</h6>
-                  <a href="./promocoes/ESTAÇÃO-ANTECIPADA/PREÇO-CORTE-ZEBU.pdf" target="_blank" class="btn btn-primary">
                     <i class="fa-solid fa-file-invoice-dollar"></i>
-                    Preços Corte Zebu
+                    Preços Sexado
                   </a>
-                  <a href="./promocoes/ESTAÇÃO-ANTECIPADA/CATÁLOGO-CORTE-ZEBU.pdf" target="_blank"
+                  <a href="./promocoes/MEGA-TOUROS/CATALOGO-LEITE-EUROPEU.pdf" target="_blank"
                     class="btn btn-primary">
                     <i class="fa-solid fa-book"></i>
-                    Catálogo Corte Zebu
+                    Catálogo de Touros
+                  </a>
+                  <h6>Leite Zebu</h6>
+                  <a href="./promocoes/MEGA-TOUROS/PREÇO-CONVENCIONAL-ZEBU.pdf" target="_blank" class="btn btn-primary">
+                    <i class="fa-solid fa-file-invoice-dollar"></i>
+                    Preços Convencional
+                  </a>
+                  <a href="./promocoes/MEGA-TOUROS/PREÇO-SEXADO-ZEBU.pdf" target="_blank" class="btn btn-primary">
+                    <i class="fa-solid fa-file-invoice-dollar"></i>
+                    Preços Sexado
+                  </a>
+                  <a href="./promocoes/MEGA-TOUROS/CATALOGO-LEITE-ZEBU.pdf" target="_blank"
+                    class="btn btn-primary">
+                    <i class="fa-solid fa-book"></i>
+                    Catálogo de Touros
                   </a>
                 </div>
               </div>
@@ -257,7 +266,7 @@
           </div>
         </div>
       </div>
-
+<!--
       <div class="col-sm-4">
         <div class="card mb-3">
           <img src="./assets/img-cards/corte-zebu.jpg" class="card-img-top imgCard" alt="...">
@@ -269,7 +278,6 @@
             </button>
           </div>
         </div>
-        <!-- Modal -->
         <div class="modal fade" id="porteiraAberta" tabindex="-1" aria-labelledby="exampleModalLabel"
           aria-hidden="true">
           <div class="modal-dialog">
@@ -307,140 +315,7 @@
           </div>
         </div>
       </div>
-
-      <div class="col-sm-4">
-        <div class="card mb-3">
-          <img src="./assets/img-cards/leite-zebu.jpg" class="card-img-top img-fluid imgCard" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Esquenta Expozebu</h5>
-            <p class="card-text"><strong>Pasta:</strong> Leite Zebu <br><strong>Validade:</strong> 10 de Maio de 2024 (até 18:00h)</p>
-            <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#esquentaExpozebu">
-              Material da Campanha
-            </button>
-          </div>
-        </div>
-        <!-- Modal -->
-        <div class="modal fade" id="esquentaExpozebu" tabindex="-1" aria-labelledby="exampleModalLabel"
-          aria-hidden="true">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">Esquenta Expozebu</h1>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-              </div>
-              <div class="modal-body">
-                <div class="d-grid gap-2 ">
-                  <h6>Documentação</h6>
-                  <a href="./promocoes/ESQUENTA-EXPOZEBU/DCO-ESQUENTA-EXPOZEBU.pdf" target="_blank"
-                    class="btn btn-warning">
-                    <i class="fa-solid fa-info"></i>
-                    DCO
-                  </a>
-                  <h6>Leite Europeu</h6>
-                  <a href="./promocoes/ESQUENTA-EXPOZEBU/PREÇO-CONVENCIONAL.pdf" target="_blank"
-                    class="btn btn-primary">
-                    <i class="fa-solid fa-file-invoice-dollar"></i>
-                    Preços - Convencional
-                  </a>
-                  <a href="./promocoes/ESQUENTA-EXPOZEBU/PREÇO-SEXADO.pdf" target="_blank" class="btn btn-primary">
-                    <i class="fa-solid fa-file-invoice-dollar"></i>
-                    Preços - Sexado
-                  </a>
-                  <a href="./promocoes/ESQUENTA-EXPOZEBU/CATÁLOGO.pdf" target="_blank" class="btn btn-primary">
-                    <i class="fa-solid fa-book"></i>
-                    Catálogo
-                  </a>
-                </div>
-              </div>
-
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-sm-4">
-        <div class="card mb-3">
-          <img src="./assets/img-cards/leite-europeu.jpg" class="card-img-top imgCard" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Expozebu</h5>
-            <p class="card-text"><strong>Pasta:</strong> Leite Europeu <br><strong>Validade:</strong> 31 de Maio de 2024 (até 18:00h)</p>
-            <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#progressoMaximo">
-              Material da Campanha
-            </button>
-          </div>
-        </div>
-        <!-- Modal -->
-        <div class="modal fade" id="progressoMaximo" tabindex="-1" aria-labelledby="exampleModalLabel"
-          aria-hidden="true">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">Expozebu</h1>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-              </div>
-              <div class="modal-body">
-                <div class="d-grid gap-2 ">
-                  <h6>Documentação</h6>
-                  <a href="./promocoes/EXPOZEBU-LEITE-EUROPEU/DCO.pdf" target="_blank"
-                    class="btn btn-warning">
-                    <i class="fa-solid fa-info"></i>
-                    DCO
-                  </a>
-                  <h6>Leite Europeu</h6>
-                  <a href="./promocoes/EXPOZEBU-LEITE-EUROPEU/PRECO-CONVENCIONAL.pdf" target="_blank" class="btn btn-primary">
-                    <i class="fa-solid fa-file-invoice-dollar"></i>
-                    Preços - Convencional
-                  </a>
-                  <a href="./promocoes/EXPOZEBU-LEITE-EUROPEU/PRECO-SEXADO.pdf" target="_blank" class="btn btn-primary">
-                    <i class="fa-solid fa-file-invoice-dollar"></i>
-                    Preços - Sexado
-                  </a>
-                  <a href="./promocoes/EXPOZEBU-LEITE-EUROPEU/CAT-LEITE-EUROPEU.pdf" target="_blank" class="btn btn-primary">
-                    <i class="fa-solid fa-book"></i>
-                    Catálogo
-                  </a>
-                </div>
-              </div>
-
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-sm-4">
-        <div class="card mb-3">
-          <img src="./assets/img-cards/embriões.jpeg" class="card-img-top imgCard" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Expozebu Embryo</h5>
-            <p class="card-text"><strong>Pasta:</strong> Leite Zebu <br><strong>Validade:</strong> 10 de Maio de 2024 (até 18:00h)</p>
-            <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#embryo">
-              Material da Campanha
-            </button>
-          </div>
-        </div>
-        <!-- Modal -->
-        <div class="modal fade" id="embryo" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">Expozebu Embryo</h1>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-              </div>
-              <div class="modal-body">
-                <div class="d-grid gap-2 ">
-                  <h6>Documentação</h6>
-                  <a href="./promocoes/EXPOZEBU-EMBRYO/DCO-EXPOZEBU-EMBRYO.pdf" target="_blank" class="btn btn-warning">
-                    <i class="fa-solid fa-info"></i>
-                    DCO
-                  </a>
-                </div>
-              </div>
-
-            </div>
-          </div>
-        </div>
-      </div>
-     
+      -->
 
   </div>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
