inserção da campanha rally do corte

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
       <div class="col-sm-4 mb-3 mb-sm-0">
 
         <div class="card mb-3">
-          <img src="./assets/img-cards/leite.jpg" class="card-img-top img-fluid imgCard" alt="...">
+          <img src="./assets/img-cards/mega-touros.png" class="card-img-top img-fluid imgCard" alt="...">
           <div class="card-body">
             <h5 class="card-title">Mega Touros</h5>
             <p class="card-text"><strong>Pasta:</strong> Leite Zebu e Europeu <br><strong>Validade:</strong> 30 de Junho de 2024 (até 18:00h)</p>
@@ -266,13 +266,13 @@
           </div>
         </div>
       </div>
-<!--
+
       <div class="col-sm-4">
         <div class="card mb-3">
-          <img src="./assets/img-cards/corte-zebu.jpg" class="card-img-top imgCard" alt="...">
+          <img src="./assets/img-cards/raly-do-corte.png" class="card-img-top imgCard" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Expozebu</h5>
-            <p class="card-text"><strong>Pasta:</strong> Corte Zebu<br><strong>Validade:</strong> 31 de Maio de 2024 (até 18:00h)</p>
+            <h5 class="card-title">Rally do Corte</h5>
+            <p class="card-text"><strong>Pasta:</strong> Corte Zebu e Europeu<br><strong>Validade:</strong> 18 de Junho de 2024 (até 18:00h)</p>
             <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#porteiraAberta">
               Material da Campanha
             </button>
@@ -289,22 +289,29 @@
               <div class="modal-body">
                 <div class="d-grid gap-2 ">
                   <h6>Documentação</h6>
-                  <a href="./promocoes/EXPOZEBU-CORTE-ZEBU/DCO-EXPOZEBU-CORTE-ZEBU.pdf" target="_blank"
+                  <a href="./promocoes/RALLY-DO-CORTE/dco.pdf" target="_blank"
                     class="btn btn-warning">
                     <i class="fa-solid fa-info"></i>
                     DCO
                   </a>
-                  <h6>Corte Europeu</h6>
-                  <a href="./promocoes/EXPOZEBU-CORTE-ZEBU/PREÇO-CONVENCIONAL.pdf" target="_blank"
+                  <h6>Corte Zebu</h6>
+                  <a href="./promocoes/RALLY-DO-CORTE/preço-corte-zebu.pdf" target="_blank"
                     class="btn btn-primary">
                     <i class="fa-solid fa-file-invoice-dollar"></i>
                     Preços Convencional
                   </a>
-                  <a href="./promocoes/EXPOZEBU-CORTE-ZEBU/PREÇO-SEXADO.pdf" target="_blank" class="btn btn-primary">
-                    <i class="fa-solid fa-file-invoice-dollar"></i>
-                    Preços Sexado
+                  <a href="./promocoes/RALLY-DO-CORTE/catalogo-corte-zebu.pdf" target="_blank"
+                    class="btn btn-primary">
+                    <i class="fa-solid fa-book"></i>
+                    Catálogo
                   </a>
-                  <a href="./promocoes/EXPOZEBU-CORTE-ZEBU/CATALOGO-EXPOZEBU-CORTE-ZEBU.pdf" target="_blank"
+                  <h6>Corte Europeu</h6>
+                  <a href="./promocoes/RALLY-DO-CORTE/preço-corte-europeu.pdf" target="_blank"
+                    class="btn btn-primary">
+                    <i class="fa-solid fa-file-invoice-dollar"></i>
+                    Preços Convencional
+                  </a>
+                  <a href="./promocoes/RALLY-DO-CORTE/catalogo-corte-europeu.pdf" target="_blank"
                     class="btn btn-primary">
                     <i class="fa-solid fa-book"></i>
                     Catálogo
@@ -315,7 +322,6 @@
           </div>
         </div>
       </div>
-      -->
 
   </div>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
