--- a/condicao-comercial/condicao-comercial.html
+++ b/condicao-comercial/condicao-comercial.html
@@ -15,188 +15,8 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg border-bottom shadow-sm mb-3">
-    <div class="container">
-      <!--LOGO-->
-      <a class="navbar-brand" href="../index.html"><strong>CRV Lagoa</strong></a>
-      <!--BOTÃO DE EXPANDIR MENU (MOBILE)-->
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
-        aria-expanded="false" aria-controls="collapseExample">
-        <div id="navMenu">
-          <span></span><span></span><span></span>
-        </div>
-      </button>
-      <!--LINKS DE NAVEGAÇÃO-->
-      <div class="navbar-collapse collapse">
-        <ul class="navbar-nav flex-grow-1">
-          <li class="nav-item">
-
-            <a class="nav-link" target="_blank"
-              href="https://drive.google.com/drive/folders/1GS4X6uBFDWpUAGAZ1diNRfR8M-mhgRaT">
-              <i class="fa-brands fa-google-drive"></i>
-              Google Drive
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" target="_blank" href="https://touros.crvbrasil.com.br/">
-              <i class="fa-solid fa-images"></i>
-              Web Catálogo
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/condicao-comercial/condicao-comercial.html">
-              <i class="fa-solid fa-sack-dollar"></i>
-              Parcelamento
-            </a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              <i class="fa-solid fa-list"></i>
-              Serviços
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" target="_blank" href="../promocoes/herdoptimizer/REGULAMENTO HERDOPTIMIZER.pdf">
-                  <i class="fa-solid fa-cow"></i>
-                  Herdoptimizer
-                </a>
-              </li>
-              <li><a class="dropdown-item" target="_blank" href="http://rastreabilidade.crvbrasil.com.br/">
-                  <i class="fa-solid fa-file-medical"></i>
-                  Consultar Partida
-                </a>
-              </li>
-              <li>
-                <a class="dropdown-item" target="_blank" href="../servicos/Lista_Contatos_Internos_CRV_28-02-24 1.pdf">
-                  <i class="fa-solid fa-address-book"></i>
-                  Contatos CRV
-                </a>
-              </li>
-              <li>
-                <a class="dropdown-item" target="_blank" href="https://forms.office.com/pages/responsepage.aspx?id=lzsiLJC9zkSMJGoITfT0rVvd4Pw3M8dMixiymdDe0wxUME5STFNFSUNOOVRMSFEzU1pZNVU0UlUwUi4u">
-                  <i class="fa-solid fa-file-signature"></i>
-                  Registro RA
-                </a>
-              </li>
-            </ul>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              <i class="fa-solid fa-magnifying-glass"></i>
-              Consulta Pública
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" target="_blank" href="https://www.ancp.org.br/consulta-de-touros/">
-                  <i class="fa-solid fa-magnifying-glass"></i>
-                  ANCP
-                </a>
-              </li>
-              <li><a class="dropdown-item" target="_blank"
-                  href="https://www.abcz.org.br/pmgz/consultar-avaliacoes-geneticas/deca">
-                  <i class="fa-solid fa-magnifying-glass"></i>
-                  PMGZ
-                </a>
-              </li>
-              <li><a class="dropdown-item" target="_blank" href="https://gppluson.geneplus.com.br/">
-                  <i class="fa-solid fa-magnifying-glass"></i>
-                  GENEPLUS
-                </a>
-              </li>
-            </ul>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              <i class="fa-brands fa-readme"></i>
-              Catálogos
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" target="_blank" href="/catalogos-de-touros/corte-zebu.pdf">
-                  <i class="fa-solid fa-book"></i>
-                  Corte Zebu
-                </a></li>
-              <li><a class="dropdown-item" target="_blank" href="/catalogos-de-touros/corte-europeu.pdf">
-                  <i class="fa-solid fa-book"></i>
-                  Corte Europeu
-                </a></li>
-              <hr>
-              <li><a class="dropdown-item" target="_blank" href="/catalogos-de-touros/leite-zebu.pdf">
-                  <i class="fa-solid fa-book"></i>
-                  Leite Zebu
-                </a></li>
-              <li><a class="dropdown-item" target="_blank" href="/catalogos-de-touros/leite-europeu.pdf">
-                  <i class="fa-solid fa-book"></i>
-                  Leite Europeu
-                </a></li>
-            </ul>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+  <div id="navbar-container"></div>
   <div class="container">
-    <!--TESTE DE CONDIÇÃO COMERCIAL-->
-    <!--
-      <h1>Teste de Condição</h1>
-      <form name="calculo">
-        <div class="mb-3">
-          <div class="input-group mb-3">
-            <span class="input-group-text" id="basic-addon1">R$</span>
-            <input inputmode="numeric" type="text" name="valor" id="valor" onkeyup="calcula()" class="form-control" placeholder="Insira aqui o valor do pedido.">
-          </div>
-        </div>
-        <div class="mb-3">
-          <p>Selecione o tipo de condição</p>
-          <nav aria-label="breadcrumb">
-            <ol class="breadcrumb">
-              <li class="breadcrumb-item">
-                <input class="form-check-input " type="radio" name="pasta" id="corte" value="corte" onkeyup="calcula()" checked>
-                <label class="form-check-label" for="corte">Corte</label>
-              </li>
-              <li class="breadcrumb-item" aria-current="page">
-                <input class="form-check-input" type="radio" name="pasta" id="leite" value="leite" onkeyup="calcula()">
-                <label class="form-check-label" for="leite">Leite</label>
-              </li>
-            </ol>
-          </nav>
-      </form>
-      <div class="mb-3 text-center">
-        <h5>Condição Máxima Permitida</h5>
-        <h3 id="result">-</h3>
-      </div>
-      <hr>
-
-    -->
-
-
-    <!--CONDIÇÃO COMERCIAL-->
-    <!--
-      <div class="accordion accordion-flush" id="accordion-condicao-comercial">
-        <div class="accordion-item">
-          <h2 class="accordion-header">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-condicao-1" aria-expanded="false" aria-controls="collapse-condicao-1">
-              Corte
-            </button>
-          </h2>
-          <div id="collapse-condicao-1" class="accordion-collapse collapse" data-bs-parent="#accordion-condicao-comercial">
-            <div class="accordion-body text-center">
-              <img src="condicao-corte.jpg" class="img-fluid" alt="Condição Comercial Corte">
-            </div>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-condicao-2" aria-expanded="false" aria-controls="collapse-condicao-2">
-              Leite
-            </button>
-          </h2>
-          <div id="collapse-condicao-2" class="accordion-collapse collapse" data-bs-parent="#accordion-condicao-comercial">
-            <div class="accordion-body text-center">
-              <img src="condicao-leite.jpg" class="img-fluid" alt="COndição Comercial Leite">
-            </div>
-          </div>
-        </div>
-      </div>
-
-    -->
     <h1 class="text-center">Condição Comercial</h1>
     
     <div class="text-center mb-3">
@@ -216,19 +36,7 @@
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-  <script src="calcula-condicao.js"></script>
-  <script>
-    //Aplicando mascara R$
-    $("#valor").mask("999.990,00", { reverse: true })
-
-    var rad = document.calculo.pasta;
-    var prev = null;
-    for (var i = 0; i < rad.length; i++) {
-      rad[i].onclick = function () {
-        calcula(this);
-      }
-    };
-  </script>
+  <script src="../navbar.js"></script>
 </body>
 
 </html>
