--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
   </div>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="navbar.js"></script>
+  <script src="./navbar.js"></script>
   <script>
     Swal.fire({
       title: '<strong>ATENÇÃO</strong>',
