--- a/navbar.html
+++ b/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg border-bottom shadow-sm mb-3">
 <div class="container">
-  <a class="navbar-brand" href="/index.html"><strong>CRV Lagoa</strong></a>
+  <a class="navbar-brand" href="./index.html"><strong>CRV Lagoa</strong></a>
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
     aria-expanded="false" aria-controls="collapseExample">
     <div id="navMenu">
